plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.dearwith'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter'
	runtimeOnly 'com.mysql:mysql-connector-j'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

	implementation platform("software.amazon.awssdk:bom:2.25.58")
	implementation "software.amazon.awssdk:s3"
	implementation "com.twelvemonkeys.imageio:imageio-jpeg:3.10.1"

	implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'

	implementation 'net.coobird:thumbnailator:0.4.20'
	implementation 'org.sejda.imageio:webp-imageio:0.1.6'
	implementation 'com.drewnoakes:metadata-extractor:2.19.0'
	implementation 'com.twelvemonkeys.imageio:imageio-core:3.12.0'
	implementation 'com.twelvemonkeys.imageio:imageio-jpeg:3.12.0'
	implementation 'com.ibm.icu:icu4j:75.1'

	implementation 'com.google.auth:google-auth-library-oauth2-http:1.18.0'
	implementation 'com.google.http-client:google-http-client:1.43.3'
	implementation 'com.google.http-client:google-http-client-jackson2:1.43.3'
	implementation 'com.google.firebase:firebase-admin:9.2.0'
}

tasks.named('test') {
	useJUnitPlatform()
}
